Sync local packages, including change macOS Ruby to Homebrew one

--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-	email = velosog@amazon.com
+	email = gjmveloso@users.noreply.github.com
 	name = Gustavo Veloso
 [core]
 	editor = code --wait
