--- a/packages/vscode.settings.json
+++ b/packages/vscode.settings.json
@@ -14,7 +14,6 @@
     "python.languageServer": "Pylance",
     "editor.fontFamily": "'FiraCode-Retina', Menlo, Monaco, 'Courier New', monospace",
     "editor.fontSize": 14,
-    "workbench.startupEditor": "newUntitledFile",
     "aws.onDefaultRegionMissing": "add",
     "vsicons.dontShowNewVersionMessage": true,
     "git.confirmSync": false,
@@ -71,4 +70,9 @@
     "telemetry.enableTelemetry": false,
     "editor.inlineHints.fontFamily": "'FiraCode-Retina', Menlo, Monaco, 'Courier New', monospace",
     "debug.console.fontSize": 14,
+    "window.openFilesInNewWindow": "default",
+    "workbench.settings.enableNaturalLanguageSearch": false,
+    "window.restoreWindows": "folders",
+    "window.openWithoutArgumentsInNewWindow": "on",
+    "aws.telemetry": false,
 }
