Sync dev environment

--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -2,7 +2,7 @@
 	email = gjmveloso@users.noreply.github.com
 	name = Gustavo Veloso
 [core]
-	editor = code --wait
+	editor = zed --wait
 [init]
 	defaultBranch = main
 [secrets]
