--- a/dotfiles/zed.settings.json
+++ b/dotfiles/zed.settings.json
@@ -9,21 +9,21 @@
 {
   "assistant": {
     "default_model": {
-      "provider": "zed.dev",
-      "model": "claude-3-5-sonnet-latest"
+      "provider": "ollama",
+      "model": "qwen2.5-coder:1.5b-instruct-q4_K_M"
     },
     "version": "2"
   },
   "features": {
     "inline_completion_provider": "none"
   },
-  "ui_font_size": 15,
+  "ui_font_size": 14,
   "buffer_font_size": 14,
   "buffer_font_family": "FiraCode Nerd Font Mono",
   "theme": {
     "mode": "system",
-    "light": "Github Dark Dimmed",
-    "dark": "Github Dark Dimmed"
+    "light": "Catppuccin Frappé",
+    "dark": "Catppuccin Frappé"
   },
   "formatter": "language_server",
   "languages": {
