Sync dev environment

--- a/dotfiles/zed.settings.json
+++ b/dotfiles/zed.settings.json
@@ -9,8 +9,8 @@
 {
   "assistant": {
     "default_model": {
-      "provider": "zed.dev",
-      "model": "claude-3-5-sonnet-latest"
+      "provider": "ollama",
+      "model": "qwen2.5-coder:7b-instruct"
     },
     "version": "2"
   },
